change some folder