@@ -5,32 +5,40 @@ import top.dennyfly.datastructure.bobo.L02_Arrays.Array;
 /**
  * @author DennyFly
  * @since 2021/10/18 15:05
- * 大顶堆（小顶堆）
- * 是一棵完全二叉树，每一个父节点需要大于等于（或小于等于）子节点的值
- * #这里堆顶的元素索引是0
+ * 大顶堆
+ * <p>
+ * 基于动态数组
+ * 是一棵完全二叉树，每一个父节点需要大于等于子节点的值
+ * 这里堆顶的元素索引是0
  * <p>
  * 基本操作
  * 1.add        添加元素（添加到末尾，然后siftUp）；
  * 2.findMax    查询最大元素（堆顶元素）；
  * 3.removeMax  删除最大元素（最后一个元素替换堆顶元素后siftDown）；
- * 4.replace    替换操作（替换堆顶元素后siftDown）
+ * 4.replace    替换操作（替换堆顶元素后siftDown）；
  * <p>
  * 内部方法
  * 1.siftUp     堆化，从下向上；
  * 2.siftDown   堆化，从上到下（取两个子孩子中比较大的那个替换）；
+ * 3.parent     当前节点的父节点；
+ * 4.leftChild  左孩子；
+ * 5.rightChild 右孩子；
+ * 6.size       使用空间；
+ * 7.isEmpty    是否为空；
  */
 public class MaxHeap<E extends Comparable<E>> {
 
     private Array<E> data;
 
-
     public MaxHeap() {
-        data = new Array<>();
+        this.data = new Array<>();
     }
 
-    // 将任意数组转换成堆，heapify操作，Onlogn 实际上是On
-    // 这里如果堆顶的元素索引是1，可以只考虑0~n/2的堆化，n/2+1~n的元素不用堆化
-    // 从后向前，从上到下的堆化
+    /**
+     * 建堆，叶子节点不用考虑
+     * 这里如果堆顶的元素索引是1，可以只考虑0~n/2的堆化，n/2+1~n的元素不用堆化
+     * 从后向前，从上到下的堆化
+     */
     public MaxHeap(E[] arr) {
         data = new Array<>(arr);
         for (int i = parent(arr.length - 1); i >= 0; i--) {
@@ -38,29 +46,32 @@ public class MaxHeap<E extends Comparable<E>> {
         }
     }
 
-    public int size() {
-        return data.getSize();
-    }
-
-    public boolean isEmpty() {
-        return data.isEmpty();
-    }
-
-    // 添加元素（末尾添加，会执行shift up操作）
+    /**
+     * 添加元素
+     * 1.末尾添加；
+     * 2.执行上升操作；
+     */
     public void add(E e) {
         data.addLast(e);
         siftUp(size() - 1);
     }
 
-    // 查询最大元素
+    /**
+     * 查询最大元素
+     */
     public E findMax() {
-        if (size() == 0) {
+        if (isEmpty()) {
             throw new IllegalArgumentException("cann't findMax when heap is empty");
         }
-        return data.get(0);
+        return data.getFirst();
     }
 
-    // 删除最大元素 （交换首尾元素后末尾删除，会执行shift down操作）
+    /**
+     * 删除堆顶元素
+     * 1.交换堆顶元素和最后一个元素的位置；
+     * 2.删除最后一个元素；
+     * 3.对新的堆顶元素执行下降操作
+     */
     public E removeMax() {
         E ret = findMax();
         data.swap(0, data.getSize() - 1);
@@ -69,7 +80,10 @@ public class MaxHeap<E extends Comparable<E>> {
         return ret;
     }
 
-    // 最大元素替换操作 （最大元素替换后siftdown 复杂度：logn）
+    /**
+     * 替换堆顶元素
+     * 时间复杂度O(logn)
+     */
     public E replace(E e) {
         E ret = findMax();
         data.set(0, e);
@@ -77,14 +91,19 @@ public class MaxHeap<E extends Comparable<E>> {
         return ret;
     }
 
-    // 最大元素替换操作2 （removeMax后 siftDown，再添加元素 siftUp 复杂度：2xlogn）
-//    public E replace2(E e) {
-//        E ret = removeMax();
-//        add(e);
-//        return ret;
-//    }
+    /**
+     * 上升 sfitUp
+     */
+    private void siftUp(int k) {
+        while (k > 0 && data.get(k).compareTo(data.get(parent(k))) > 0) {
+            data.swap(k, parent(k));
+            k = parent(k);
+        }
+    }
 
-    // 比较并替换第一个元素和下面元素的位置
+    /**
+     * 下降 siftDown
+     */
     private void siftDown(int k) {
         while (leftChild(k) < data.getSize()) {
             int j = leftChild(k);
@@ -100,15 +119,17 @@ public class MaxHeap<E extends Comparable<E>> {
         }
     }
 
-    // 比较并替换最后一个元素和上面元素的位置
-    private void siftUp(int k) {
-        while (k > 0 && data.get(parent(k)).compareTo(data.get(k)) < 0) {
-            data.swap(k, parent(k));
-            k = parent(k);
-        }
+    public int size() {
+        return data.getSize();
     }
 
-    // 获取当前节点的父节点
+    public boolean isEmpty() {
+        return data.isEmpty();
+    }
+
+    /**
+     * 当前节点父节点
+     */
     private int parent(int index) {
         if (index <= 0) {
             throw new IllegalArgumentException("index <=0 doesn't have parent!");
@@ -116,7 +137,9 @@ public class MaxHeap<E extends Comparable<E>> {
         return (index - 1) / 2;
     }
 
-    // 当前节点左孩子
+    /**
+     * 当前节点左孩子
+     */
     private int leftChild(int index) {
         if (index < 0) {
             throw new IllegalArgumentException("index must > 0!");
@@ -124,7 +147,9 @@ public class MaxHeap<E extends Comparable<E>> {
         return index * 2 + 1;
     }
 
-    // 当前节点右孩子
+    /**
+     * 当前节点右孩子
+     */
     private int rightChild(int index) {
         if (index < 0) {
             throw new IllegalArgumentException("index must > 0!");
